--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -171,21 +171,52 @@
                                     <action selector="RequestStoryButton_TouchUpInside:" destination="1771" id="2301" eventType="touchUpInside"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2557" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="0.0" y="198" width="375" height="469"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2558">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2558" id="2559">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2617" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="20" y="162" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <constraints>
+                                    <constraint id="2620" firstItem="2617" firstAttribute="height" constant="21"/>
+                                </constraints>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint id="2224" firstItem="2223" firstAttribute="centerX" secondItem="1772" secondAttribute="centerX"/>
                             <constraint id="2227" firstItem="2223" firstAttribute="top" secondItem="1768" secondAttribute="bottom" constant="40"/>
+                            <constraint id="2614" firstItem="2557" firstAttribute="bottom" secondItem="1772" secondAttribute="bottom"/>
+                            <constraint id="2615" firstItem="2557" firstAttribute="leading" secondItem="1772" secondAttribute="leadingMargin"/>
+                            <constraint id="2616" firstItem="2557" firstAttribute="trailing" secondItem="1772" secondAttribute="trailingMargin"/>
+                            <constraint id="2618" firstItem="2617" firstAttribute="leading" secondItem="1772" secondAttribute="leadingMargin" constant="20"/>
+                            <constraint id="2619" firstItem="2617" firstAttribute="top" secondItem="2223" secondAttribute="bottom" constant="28"/>
+                            <constraint id="2646" firstItem="2557" firstAttribute="top" secondItem="2617" secondAttribute="bottom" constant="15"/>
                         </constraints>
                     </view>
                     <navigationItem title="Title" id="2207" key="navigationItem"/>
                     <connections>
                         <outlet property="NavItem" destination="2207" id="name-outlet-2207"/>
                         <outlet property="RequestStoryButton" destination="2223" id="name-outlet-2223"/>
+                        <outlet property="StoriesTableView" destination="2557" id="name-outlet-2557"/>
                     </connections>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1773" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1456" y="-560"/>
+            <point key="canvasLocation" x="1526" y="-497"/>
         </scene>
     </scenes>
     <resources>
