--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -59,7 +59,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1387" y="267"/>
+            <point key="canvasLocation" x="1483" y="347"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -72,7 +72,7 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue id="1216" destination="1162" kind="relationship" relationship="viewControllers"/>
+                        <segue id="3070" destination="2935" kind="relationship" relationship="viewControllers"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
                 </tabBarController>
@@ -82,7 +82,7 @@
         </scene>
         <scene sceneID="953">
             <objects>
-                <tableViewController id="954" sceneMemberID="viewController" customClass="ContactsViewController" hasRefreshControl="1">
+                <tableViewController id="954" sceneMemberID="viewController" customClass="ContactsViewController" hasRefreshControl="1" storyboardIdentifier="ContactsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="955">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -104,15 +104,23 @@
                     </tableView>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationItem title="Contacts" id="1251" key="navigationItem">
-                        <barButtonItem key="rightBarButtonItem" title="Import" id="1258">
-                            <connections>
-                                <action selector="ImportButton_Activated:" destination="954" id="1282"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Done" id="6695">
+                                <connections>
+                                    <action selector="DoneButtonTouched:" destination="954" id="6742"/>
+                                </connections>
+                            </barButtonItem>
+							<barButtonItem title="Import" id="1258">
+                                <connections>
+                                    <action selector="ImportButton_Activated:" destination="954" id="1282"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="ImportButton" destination="1258" id="name-outlet-1258"/>
                         <segue id="1909" destination="1771" kind="show" identifier="GoToContactDetails"/>
+                        <outlet property="DoneButton" destination="6695" id="name-outlet-6695"/>
                     </connections>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="1528">
                         <autoresizingMask key="autoresizingMask"/>
@@ -125,27 +133,12 @@
                             </fragment>
                         </attributedString>
                     </refreshControl>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="960" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="907" y="-780"/>
-        </scene>
-        <scene sceneID="1161">
-            <objects>
-                <navigationController id="1162" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1164">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue id="1252" destination="954" kind="relationship" relationship="rootViewController"/>
-                    </connections>
-                    <tabBarItem key="tabBarItem" id="1215" systemItem="contacts"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1165" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="417" y="-789"/>
+            <point key="canvasLocation" x="457" y="-1163"/>
         </scene>
         <scene sceneID="1770">
             <objects>
@@ -216,7 +209,81 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1773" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1526" y="-497"/>
+            <point key="canvasLocation" x="1097" y="-1176"/>
+        </scene>
+        <scene sceneID="2934">
+            <objects>
+                <navigationController id="2935" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2937">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue id="3129" destination="3077" kind="relationship" relationship="rootViewController"/>
+                    </connections>
+                    <tabBarItem key="tabBarItem" id="3069" title="Stories"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2938" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="967" y="-427"/>
+        </scene>
+        <scene sceneID="3076">
+            <objects>
+                <tableViewController id="3077" sceneMemberID="viewController" customClass="StoriesListViewController" storyboardIdentifier="StoriesListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" hasRefreshControl="1">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="3078">
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3081">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3081" id="3082">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="3077" id="3079"/>
+                            <outlet property="delegate" destination="3077" id="3080"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem title="Title" id="3128" key="navigationItem">
+                        <rightBarButtonItems>
+                            <barButtonItem title="Send" id="3698">
+                                <connections>
+                                    <action selector="SendStoryButtonTouched:" destination="3077" id="3847"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Request" id="3780">
+                                <connections>
+                                    <action selector="RequestStoryButtonTouched:" destination="3077" id="3848"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="3412">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <attributedString key="attributedTitle">
+                            <fragment content="Loading">
+                                <attributes>
+                                    <font key="NSFont" name="HelveticaNeue" family="Helvetica Neue" size="15"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                    </refreshControl>
+                    <connections>
+                        <outlet property="RequestStoryButton" destination="3780" id="name-outlet-3780"/>
+                        <outlet property="SendStoryButton" destination="3698" id="name-outlet-3698"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3083" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1608" y="-656"/>
         </scene>
     </scenes>
     <resources>
