Fix stories list, Cache videos, Send story request to contacts with the right contact name, Handle story request push notification Present story name and recipient Loop video player Show spinner while loading

--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -250,7 +250,7 @@
                             <outlet property="delegate" destination="3077" id="3080"/>
                         </connections>
                     </tableView>
-                    <navigationItem title="Title" id="3128" key="navigationItem">
+                    <navigationItem title="Stories" id="3128" key="navigationItem">
                         <rightBarButtonItems>
                             <barButtonItem title="Send" id="3698">
                                 <connections>
