--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="419" id="cxk-wN-pdQ" customClass="StoriesListCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="419"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="439" id="cxk-wN-pdQ" customClass="StoriesListCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="439"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="418"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="438"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" id="218" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="0" minimumScaleFactor="0.5">
-                        <rect key="frame" x="16" y="0.0" width="295" height="44"/>
+                        <rect key="frame" x="16" y="10" width="295" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -24,7 +24,7 @@
                         </constraints>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="223" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="319" y="12.5" width="40" height="19"/>
+                        <rect key="frame" x="319" y="22.5" width="40" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
                         <nil key="highlightedColor"/>
@@ -35,31 +35,35 @@
                         </constraints>
                     </label>
                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="5507" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="0.0" y="44" width="375" height="375"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="375"/>
                         <constraints>
                             <constraint id="5537" firstAttribute="width" secondItem="5507" secondAttribute="height" multiplier="1:1"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" id="1686" translatesAutoresizingMaskIntoConstraints="NO" hidden="YES">
-                        <rect key="frame" x="0.0" y="44" width="375" height="375"/>
-                        <color key="backgroundColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="375"/>
                         <constraints>
                             <constraint id="5173" firstAttribute="width" secondItem="1686" secondAttribute="height" multiplier="1:1"/>
                         </constraints>
                     </view>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7013" hidden="YES">
+                        <rect key="frame" x="169" y="233" width="37" height="37"/>
+                    </activityIndicatorView>
                 </subviews>
                 <constraints>
                     <constraint id="220" firstItem="218" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="16"/>
-                    <constraint id="221" firstItem="218" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top"/>
+                    <constraint id="221" firstItem="218" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10"/>
                     <constraint id="224" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="223" secondAttribute="trailing" constant="16"/>
                     <constraint id="248" firstItem="223" firstAttribute="leading" secondItem="218" secondAttribute="trailing" constant="8"/>
                     <constraint id="560" firstItem="223" firstAttribute="centerY" secondItem="218" secondAttribute="centerY"/>
-                    <constraint id="5167" firstItem="1686" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="44"/>
+                    <constraint id="5167" firstItem="1686" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="64"/>
                     <constraint id="5168" firstItem="1686" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading"/>
                     <constraint id="5172" firstItem="1686" firstAttribute="trailing" secondItem="YTl-1W-gDM" secondAttribute="trailing"/>
-                    <constraint id="5508" firstItem="5507" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="44"/>
+                    <constraint id="5508" firstItem="5507" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="64"/>
                     <constraint id="5511" firstItem="5507" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading"/>
                     <constraint id="5512" firstItem="5507" firstAttribute="trailing" secondItem="YTl-1W-gDM" secondAttribute="trailing"/>
+                    <constraint id="7014" firstItem="7013" firstAttribute="centerX" secondItem="1686" secondAttribute="centerX"/>
+                    <constraint id="7015" firstItem="7013" firstAttribute="centerY" secondItem="1686" secondAttribute="centerY"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -67,6 +71,7 @@
                 <outlet property="Date" destination="223" id="name-outlet-223"/>
                 <outlet property="Video" destination="1686" id="name-outlet-1686"/>
                 <outlet property="Preview" destination="5507" id="name-outlet-5507"/>
+                <outlet property="Spinner" destination="7013" id="name-outlet-7013"/>
             </connections>
             <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
         </tableViewCell>
